--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="test_text_l">sfsgfdg dgdsfg fgdgfh dffdgdg gffgh fgj hfhfghfhfg fhgfh  fghfh fghfth  hdhdh  shrth fhdrthsrth  hdtyjyh hdh6hrt hdhh hh5a f rtdhe56  srthe56h w</string>
     <string name="test_text_s_u"><u>Hello World</u></string>
     <string name="show_offers"><a>Show offers</a></string>
+    <string name="is_empty">%1$s is empty.</string>
 </resources>
